src/test/ui/async-await/proper-span-for-type-error.stderr
error[E0308]: mismatched types
  --> $DIR/proper-span-for-type-error.rs:8:5
   |
LL |     a().await
   |     ^^^^^^^^^ expected enum `Result`, found `()`
   |
   = note:   expected enum `Result<(), i32>`
           found unit type `()`
help: try wrapping the expression in `Ok`
   |
LL |     Ok(a().await)
   |     +++         +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
